updated location, program, speakers files

--- a/3kings/location.htm
+++ b/3kings/location.htm
@@ -65,13 +65,14 @@
     <div id="main">
       <h1>Locations</h1>
       <p>&nbsp;</p>
-      <p><strong>LOCATION:</strong><strong> </strong><br />
+      <h2><strong>LOCATION:</strong><strong> </strong><br />
 				The 2018 Jacksonville Upper Extremity Conference will be at:<br />
-      <p>&nbsp;</p>
+      <!-- <p>&nbsp;</p> -->
 
         Montreux at Deerwood Lakes Theater Room
-        8550 Touchton Rd.
-        Jacksonville, FL 332216</p>
+        <p>8550 Touchton Rd.</p>
+        <p>Jacksonville, FL 32216</p>
+      </h2>
 <p><br />
   </p>
       </p>
