--- a/3kings/program.htm
+++ b/3kings/program.htm
@@ -63,7 +63,7 @@
 
     <div id="main">
       <h1>Conference Program</h1>
-      <h4 align= "center"><a href="/2018 brochurecourse-1.pdf">Brochure</a><h4>
+      <h2 align= "center"><a href="/2018 brochurecourse-1.pdf">Click here -> Brochure</a><h2>
       <!-- <p>&nbsp;</p>
       <p>Download the Doctors Demystify course brochure <a href="Flyer for DD-Thumb.pdf">HERE</a></p>
       <p>&nbsp;</p>
@@ -77,7 +77,7 @@
 
       <ul>
         <li>5:30pm-545pm: Registration</li><br>
-        <li>5:45pm-6:15pm: Antonio Forte, MD, MHS, PhD: Microsurgical treatment of UE lymphedema</li><br>
+        <li>5:45pm-6:15pm: Antonio Forte, MD, MS, PhD: Microsurgical treatment of UE lymphedema</li><br>
         <li>6:15pm-6:30pm: Get dinner and return to seats</li><br>
         <li>6:30pm-7:30pm: Beverly Bass, OTD, OTR/L, CHT, CLT: Lymphedema techniques in the orthopedic population(Lecture followed by lab)</li><br>
         <li>7:30pm-8:30pm: Melinda Petty DPT,OTR/L,CHT: Cervical Spine screening (Lecture followed by lab)</li><br>
