--- a/3kings/speakers.htm
+++ b/3kings/speakers.htm
@@ -106,14 +106,14 @@
       <p>&nbsp;</p>
       <!-- <p>&nbsp;</p> -->
 
-      <p><strong>Antonio Forte, MD. MHS, PhD</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
+      <p><strong>Antonio Forte, MD. MS, PhD</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
       <p><img src="images/antonioforte.jpg" alt="" width="158" height="119" hspace="12" vspace="12" align="left" /></p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
-      <p><strong>Antonio Forte, MD. MHS, PhD</strong> Dr. Forte graduated from Federal University of Ceara Medical School in Brazil. He also obtained his masters in Pharmacology there in 2009. In 2014 he completed his residency in Plastic and Reconstructive surgery at Yale University School of Medicine and 2014 a Hand and Microsurgery Fellowship at the Buncke Clinic. He completed is PhD in 2017 in Clinical Surgery/Field: Plastic Surgery/ Subfield: Craniofacial Surgery from the University of Sao Paulo Medical School. He currently practices in the plastic surgery department at Mayo Clinic Jacksonville. </p>
+      <p><strong>Antonio Forte, MD. MS, PhD</strong> Dr. Forte graduated from Federal University of Ceara Medical School in Brazil. He also obtained his masters in Pharmacology there in 2009. In 2014 he completed his residency in Plastic and Reconstructive surgery at Yale University School of Medicine and 2014 a Hand and Microsurgery Fellowship at the Buncke Clinic. He completed is PhD in 2017 in Clinical Surgery/Field: Plastic Surgery/ Subfield: Craniofacial Surgery from the University of Sao Paulo Medical School. He currently practices in the plastic surgery department at Mayo Clinic Jacksonville. </p>
       <p>&nbsp;</p>
       <!-- <p>&nbsp;</p> -->
 
