updated images, programs & registration file

--- a/3kings/program.htm
+++ b/3kings/program.htm
@@ -11,6 +11,7 @@
 <meta name="Robots" content="index,follow" />
 
 <link rel="stylesheet" href="images/BrightSide.css" type="text/css" />
+<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 
 <title>3Kings Upper Extremity Specialists</title>
 
@@ -63,7 +64,7 @@
 
     <div id="main">
       <h1>Conference Program</h1>
-      <h2 align= "center"><a href="/2018 brochurecourse-1.pdf">Click here -> Brochure</a><h2>
+      <h2 align= "center"><i class="fas fa-arrow-circle-right"></i><a href="2018_brochurecourse.pdf"> Brochure</a><h2>
       <!-- <p>&nbsp;</p>
       <p>Download the Doctors Demystify course brochure <a href="Flyer for DD-Thumb.pdf">HERE</a></p>
       <p>&nbsp;</p>
@@ -99,7 +100,7 @@
 <p><strong>&nbsp;</strong></p>
 <p><br />
 </p>
-<p><img src="images/jax%20pier.jpg" width="260" height="207" border="3" /><img src="images/jax%20beach%20walkway.jpg" width="260" height="207" border="3" /></p>
+<!-- <p><img src="images/jax%20pier.jpg" width="260" height="207" border="3" /><img src="images/jax%20beach%20walkway.jpg" width="260" height="207" border="3" /></p> -->
       <p><a name="SampleTags"></a></p>
 
       <h1 align="center">&nbsp;</h1>
