--- a/3kings/registration.htm
+++ b/3kings/registration.htm
@@ -64,19 +64,20 @@
     <div id="main">
       <h1>Registration</h1>
       <p>&nbsp;</p>
-      <p><a href="registration2016.htm"></a>To register for the Doctors Demystify course brochure <a href="http://www.doctorsdemystify.com">HERE</a></p>
+      <p style="font-size:15px">At this time, 3Kings Upper Extremity Specialists, is unable to take credit card payments online. If you would like to pay via credit card, please use PayPal and pay the <a>3KingsUEspecialist@gmail.com</a> account. There is an extra $10 fee for paying via Paypal so please add to the amounts listed below.
+        <p style="font-size:15px">$210 if you have not attended a prior course, $189 if you have attended a previous course.</p>
+      </p>
       <p>&nbsp;</p>
-      <p>To register for the Joint Mobilization course brochure <a href="/registration2016pain.htm">HERE</a></p>
+      <!-- <p>To register for the Joint Mobilization course brochure <a href="/registration2016pain.htm">HERE</a></p> -->
       <p>&nbsp;</p>
-      <p>To register for the Orthoses course brochure <a href="/registration2016shoulder.htm">HERE</a></p>
+      <!-- <p>To register for the Orthoses course brochure <a href="/registration2016shoulder.htm">HERE</a></p> -->
 <p>&nbsp;</p>
       <p><br />
         <br />
   </p>
       </p>
-      <p><br />
-      </p>
-      <p><img src="images/jax%20pier.jpg" width="260" height="207" border="3" /><img src="images/jax%20beach%20walkway.jpg" width="260" height="207" border="3" /></p>
+      <h2 align="center"><a href="payment_coupon.pdf">Payment Coupon</a></h2><br />
+      <!-- <p><img src="images/jax%20pier.jpg" width="260" height="207" border="3" /><img src="images/jax%20beach%20walkway.jpg" width="260" height="207" border="3" /></p> -->
       <p><a name="SampleTags"></a></p>
 
       <h1 align="center">&nbsp;</h1>
